# caw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
caw/: __init__.py  agent.py  cli.py  display.py  faststats.py  mcp.py  models.py  pricing.json  pricing.py  provider.py  storage.py  subagent_server.py  toolkit.py
caw/auth/: README.md  __init__.py  cli.py  collector.py  linker.py  manifest.py  providers.py  status.py
caw/providers/: claude_code.py  codex.py  openai_agents.py
caw/viewer/: __init__.py
caw/viewer/static/: index.html
examples/: auth.py  basic.py  haiku.py  interactive.py  model_tiers.py  subagent.py  tool_groups.py  toolkit.py  tools_simple.py  traj_viewer.py
tests/: test_auth_api.py  test_autowait.py  test_check_limit.py  test_faststats.py  test_model_tiers.py  test_openai_agents_provider.py  test_placeholder.py  test_send_async.py  test_step_save.py  test_storage.py  test_tool_groups.py  test_toolkit.py  test_trajectory_io.py  test_usage.py
