[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caw"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Zijie", email = "zijie4@illinois.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["rich>=13.0", "mcp>=1.0", "uvicorn>=0.30", "typer>=0.9", "openai-agents>=0.14.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.9",
    "mypy",
    "prek",
]

[project.urls]
Homepage = "https://github.com/zzjas/caw"
Repository = "https://github.com/zzjas/caw"

[project.scripts]
caw = "caw.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".eggs", ".git", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.lint]
ignore = ["E203", "E266"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
